removed close tab setting from dashboard UI since it doesn't control anything anymore, fiddled w top padding on columns a little, fixed overflow issue with confirmation button when page is narrow

--- a/server/pages/_sass/dashboard.sass
+++ b/server/pages/_sass/dashboard.sass
@@ -7,11 +7,13 @@ $card-fill-color: white;
 
 
 #app-dashboard
+	.btn-primary
+    	white-space: normal;
 	.column-thing
 		// hack until I get pagination set up on the tab controller
 		max-width: 50%;
 	.dashboard-container
-		padding-top: 50px;
+		padding-top: 20px;
 		padding-left: 100px;
 		padding-right: 100px;
 		position: absolute;
